tests/integration/error/reference_unknown_type.alo
// expect-error: Unknown parameter type: &Missing
fun consume_missing(p: &Missing) -> void{}

fun main() -> void {
}
